fix: Updates BSc Dissertation Dark Mode Settings

--- a/src/theme.css
+++ b/src/theme.css
@@ -10,10 +10,6 @@
   --button-border-color: #646cff;
   --link-color: #646cff;
   --link-hover-color: #535bf2;
-  --topbar-background-color: #e8e8e8;
-  --topbar-text-color: black;
-  --footer-background-color: #333;
-  --footer-text-color: #fff;
   --menu-theme: 'light';
 }
 
@@ -29,9 +25,5 @@
   --button-border-color: #646cff;
   --link-color: #747bff;
   --link-hover-color: #535bf2;
-  --topbar-background-color: #1a1a1a;
-  --topbar-text-color: rgba(255, 255, 255, 0.87);
-  --footer-background-color: #1a1a1a;
-  --footer-text-color: rgba(255, 255, 255, 0.87);
   --menu-theme: 'dark';
 }
